maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: class Array takes type parameters
  var BiscuitCoord: Array;
                    ^JediEscaper:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var BiscuitCoord: Array;
      ^JediEscaper:3: error: class Array takes type parameters
  var BiscuitCoord: Array;
                    ^JediEscaper:3: error: local variables must be initialized
  var BiscuitCoord: Array;
      ^JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^